--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <script src="js/app.js" defer></script>
 </head>
 <body>
-    <h1 onclick="">Hello world!</h1>
+    <h1 onclick="">qwewqeqwe</h1>
 
     <!-- <script>
         alert('Делай Александр');
