--- a/index.html
+++ b/index.html
@@ -9,9 +9,6 @@
 </head>
 <body>
     <h1 onclick="">qwewqeqwe</h1>
-
-    <!-- <script>
-        alert('Делай Александр');
-    </script> -->
+<div class="out"></div>
 </body>
 </html>
