--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <script src="js/app.js" defer></script>
 </head>
 <body>
-    <h1 onclick="">qwewqeqwe</h1>
-<div class="out"></div>
+    <h1 onclick="">Циклы, которые я должен понять</h1>
+     <h2>Сегодня разобрал немного как работают циклы, завтра продолжу.</h2>
 </body>
 </html>
