--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <script src="js/app.js" defer></script>
 </head>
 <body>
-    <h1 onclick="">Циклы, которые я должен понять</h1>
-     <h2>Сегодня разобрал немного как работают циклы, завтра продолжу.</h2>
+    <h1 onclick="">Циклы понял +-, нужно разобрать функции</h1>
+     <h2>Сегодня разбираю функции, скоро думаю пойму их полностью.</h2>
 </body>
 </html>
